
<resources>
    <string name="app_name">Music App</string>
    <string name="pop_music">POP</string>
    <string name="rap_music">RAP</string>
    <string name="rock_music">ROCK</string>
    <string name="country_music">COUNT</string>
    <string name="blues_music">BLUES</string>
    <string name="jaz_music">JAZ</string>
    <string name="search_hint">Search</string>
    <string name="home_view">Home</string>
    <string name="exit_button">Exit</string>
</resources>
